Preventing overflow (horizontal scrollbar) when displaying in xs size window.
Fixed Mac and Windows screen shot paddings.

--- a/css/basic.css
+++ b/css/basic.css
@@ -1,3 +1,9 @@
+@media (max-width:767px) {
+  .bs-docs-container {
+	  overflow: hidden;
+  }
+}
+
 @media (min-width:768px) and (max-width: 991px) {
   body {
     padding-top: 100px;
@@ -11,7 +17,7 @@
   }
   .bs-docs-sidebar {
 	padding-top: 0px;
-	padding-bottom: 25px;
+	padding-bottom: 30px;
   }
   /* all links */
   .bs-docs-sidebar .nav>li>a {
@@ -180,14 +186,21 @@
 .red {
 	color: #F00;
 }
+
 .mac_prefs_screenshot {
 	margin-top: -32px;
 	margin-bottom: -80px;
 	margin-left: -08.6%;
 	margin-right: -08.6%;
-	padding-top: 5px;
-	padding-bottom: 40px;
+	padding-top: 10px;
+	padding-bottom: 50px;
 }
+
+.bs-docs-section>img.img-responsive {
+	padding-top: 10px;
+	padding-bottom: 30px;
+}
+
 .image1 {
 	margin-top: 5px;
 	margin-right: 0px;
